--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
   <h1>王强的空间</h1>
+  <img src="https://avatars0.githubusercontent.com/u/72492172?s=400&u=ae9620600be6924adacbc2fe9d53241a649ee95b&v=4">
 </body>
 </html>
